name:                reactive-banana-counter-qt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mode89/reactive-banana-counter-qt#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Krainyak
maintainer:          mode.andrew@gmail.com
copyright:           2021 Andrey Krainyak
category:            Example
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable reactive-banana-counter-qt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
